--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
   <head>
     <title>FocusTrack</title>
+    <meta name="description" content="Manage your tasks effectively">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="styles.css">
     <!-- 1. Load libraries -->
     <!-- IE required polyfill -->
+    <script src="https://use.fontawesome.com/486d723f4d.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
