Add loading icon

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app><img src="images/ring-alt.svg" alt="Loading..." class="loader" /></my-app>
   </body>
 </html>
